# typit

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp  player.cpp  player.h  render.cpp  test  test.cpp  typit
src/: game.cpp  game.h  main.cpp  menu.cpp  menu.h  menu_render.cpp  menu_render.h  player.cpp  player.h  render.cpp  render.h  term.h
src/menu/: menu.cpp  menu.h  number_menu.cpp  number_menu.h  option_menu.cpp  option_menu.h
src/menu/render/: menu_render.cpp  menu_render.h  menu_render_number.cpp  menu_render_number.h  menu_render_options.cpp  menu_render_options.h
src/terms/: term-linux.cpp  term-windows.cpp  term.h
